objects/Iseries_SF_Account_Sync__e.object
<CustomObject>
    <description>Platform events to capture account creation/modification in iSeries and sync to R4B Org using API GW.</description>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>AccountName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <label>AccountNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountStatus__c</fullName>
        <label>AccountStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountType__c</fullName>
        <label>AccountType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingAddressCity__c</fullName>
        <label>BillingAddressCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingAddressCountry__c</fullName>
        <label>BillingAddressCountry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingAddressLine1__c</fullName>
        <label>BillingAddressLine1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingAddressLine2__c</fullName>
        <label>BillingAddressLine2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingAddressPostalCode__c</fullName>
        <label>BillingAddressPostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingAddressProvince__c</fullName>
        <label>BillingAddressProvince</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MALID__c</fullName>
        <label>MALID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentAccountNumber__c</fullName>
        <label>ParentAccountNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAddressDSTFlag__c</fullName>
        <label>ServiceAddressDSTFlag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteAddress1__c</fullName>
        <label>SiteAddress1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteAddress2__c</fullName>
        <label>SiteAddress2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteCityName__c</fullName>
        <label>SiteCityName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteCountryCode__c</fullName>
        <label>SiteCountryCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SitePostalCode__c</fullName>
        <label>SitePostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteProvinceCode__c</fullName>
        <label>SiteProvinceCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeStamp__c</fullName>
        <label>TimeStamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeZone__c</fullName>
        <label>TimeZone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Iseries SF Account Sync</label>
    <pluralLabel>Iseries SF Account Sync</pluralLabel>
</CustomObject>